--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -372,6 +372,14 @@ animation: spin 1s linear infinite;
     }
   }
 
+  .resetBtn:hover{
+    cursor: pointer;
+  }
+
+  .resetBtn {
+    color: black!important;
+  }
+
   @keyframes successAnim {
  
     0% {
