--- a/src/components/pages/Admin/DetailedCompotents/AnswersAndCode.module.css
+++ b/src/components/pages/Admin/DetailedCompotents/AnswersAndCode.module.css
@@ -21,6 +21,10 @@
     outline: none;
 }
 
+.answer input::placeholder {
+    color: #bbbbbb;
+}
+
 .codeWrapper {
     display: flex;
     flex-direction: row;
@@ -28,7 +32,7 @@
     margin-right: 5px;
 }
 
-textarea {
+.codeWrapper textarea {
     max-width: 96%;
     margin: 5px;
     border: 1.5px solid #d9d9d9;
@@ -37,3 +41,16 @@ textarea {
     font-size: 17px;
     outline: none;
 }
+
+.disappeared {
+    display: none;
+}
+  
+.appeared {
+    display: inline-flex;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 19px;
+    color: #555555;
+    font-weight: bold;
+}
+
