--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -14,10 +14,11 @@
 }
 
 .quizesWrapper {
-  margin: 50px 50px;
-  border-radius: 15px;
-  padding: 15px;
-  box-shadow: 5px 5px 25px rgba(0,0,0,.5);
+    width: 80%;
+    margin-top: 30px;
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: 5px 5px 25px rgba(0,0,0,.5);
 }
 
 .logoAdmin {
@@ -46,15 +47,24 @@
 }
 
 .sidebar-left{
-    position:absolute;
-    left:0; 
-    top:102px; 
-    width: 250px;
-    padding: 0 20px;
-    animation: 800ms ease-out 0s 1 slideInFromLeftAdm;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  height: 100vh;
+  left: 0;
+  float: left;
+  width: 250px;
+  padding: 0 20px;
+  animation: 800ms ease-out 0s 1 slideInFromLeftAdm;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.buttonsWrapper {
+  margin-top: -50px;
+  width: 250px;
+  animation: 800ms ease-out 0s 1 slideInFromLeftAdm;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .sidebar-left .linear ::before {
@@ -70,12 +80,13 @@
 }
 
 .mainAdmin{
-    position: absolute;
-    left:290px; 
-    top:102px; 
-    right:0;
-    animation: 800ms ease-out 0s 1 slideInFromRightAdm;
-    height: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 290px;
+  right: 0;
+  animation: 800ms ease-out 0s 1 slideInFromRightAdm;
 }
 
 .footer{
@@ -87,12 +98,13 @@
 }
 
 .addForm{
-    font-size: 18px;
-    border-radius: 15px;
-    padding: 15px;
-    margin: 50px 100px;
-    box-shadow: 5px 5px 25px rgba(0,0,0,.5); 
-    color: #555555;
+  width: 80%;
+  font-size: 18px;
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 110px;
+  box-shadow: 5px 5px 25px rgba(0,0,0,.5);
+  color: #555555;
 }
 
  .addForm input, select, textarea{
@@ -123,9 +135,9 @@ input::placeholder {
     display:flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;
+    /* align-items: flex-start;
     flex-grow: 1;
-    width:100%;
+    width:100%; */
 }
 
 .addForm input[type="number"] {
