--- a/src/components/pages/Admin/Question/Questions.module.css
+++ b/src/components/pages/Admin/Question/Questions.module.css
@@ -1,8 +1,11 @@
 .questionWrapper {
   border-radius: 15px;
-  margin: 50px 50px;
+  margin-top: 120px;
   padding: 15px;
   box-shadow: 5px 5px 25px rgba(0,0,0,.5);
+  overflow-y: scroll;
+  height: 70%;
+  width: 80%;
 }
 
 .filters {
