--- a/src/components/pages/Admin/DetailedCompotents/ChangePsw.css
+++ b/src/components/pages/Admin/DetailedCompotents/ChangePsw.css
@@ -16,11 +16,10 @@
 .changePswBtn {
   color:white;
   font-size: 20px;
-  /* width: 200px; */
+  width: 200px;
   height: 50px;
   border: none;
   border-radius: 10px;
-  background-color:rgb(77, 56, 116);
   text-shadow: 2px 2px 6px #F5F5F5;
   font-family: 'Courier New', Courier, monospace;
   font-weight: bolder;
@@ -31,26 +30,11 @@
   height: 60px;
   margin-top: 40px;
   border-radius: 10px;
-  border:1px solid purple;
+  border:1px solid lightgrey;
   cursor: none;
   font-size: larger;
   margin-left: 100px;
 }
-
-.container button {
-  /* width: 40%; */
-  height: 60px;
-  margin-top: 40px;
-  border-radius: 10px;
-  border:1px solid purple;
-  color: white;
-  margin-left: 320px;
-  font-size: 30px;
-  text-shadow: 2px 2px 6px #F5F5F5;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: bolder;
-}
-
 
 
 
