--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -422,18 +422,18 @@ input::placeholder {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
-
 }
+
 .filterForm {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 10px;
  /* border: 1px solid red;
 */
 }
 
 .filterForm input[type='text'] {
-  
     width: 50%;
     padding: 9px;
     border: 1.5px solid #bbbbbb;
@@ -443,17 +443,6 @@ input::placeholder {
     font-size: 17px;
     letter-spacing: 0.02857em;
     outline: none;
-  
-  
-  /* outline: none;
-  padding: 5px;
-  border-radius: 7px;
-  font-family: 'Courier New', Courier, monospace;
-  font-style: italic;
-  font-size: 17px;
-  box-shadow: 2px 2px 2px rgba(0,0,0,.5);
-  border: none;
-  width: 50%; */
 }
 
 .filterForm select {
@@ -589,11 +578,12 @@ input::placeholder {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 5px;
 }
 
 hr {
-  margin-bottom: 25px;
-  border: 0.1px solid white;
+  margin: 0 0 25px 0;
+  border: 0.1px solid #ededed;
 }
 
 button, input[type='submit'], input[type='button'] {
