--- a/src/components/pages/Admin/DetailedCompotents/ChangePsw.module.css
+++ b/src/components/pages/Admin/DetailedCompotents/ChangePsw.module.css
@@ -9,6 +9,7 @@
 h1 {
   color: #555555;
   letter-spacing: 1.8px;
+  margin-bottom: 5px;
 }
 
 .formWrapper {
@@ -17,7 +18,7 @@ h1 {
   justify-content: space-between;
   height: 35%;
   width: 60%;
-  margin-top: 15px;
+  margin: 50px 0 45px 0;
 }
 
 .inputWrapper, .submitWrapper {
@@ -77,5 +78,5 @@ h1 {
 }
 
 .changePassWrapper hr {
-  margin-top: 40px;
+  margin-top: 30px;
 }
