hint text for editing questions and answers

--- a/src/components/pages/Admin/DetailedCompotents/AnswersAndCode.module.css
+++ b/src/components/pages/Admin/DetailedCompotents/AnswersAndCode.module.css
@@ -47,10 +47,26 @@
 }
   
 .appeared {
+    position: relative;
     display: inline-flex;
     font-family: 'Courier New', Courier, monospace;
     font-size: 19px;
     color: #555555;
     font-weight: bold;
+    cursor: pointer;
 }
 
+.hint {
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    height: max-content;
+    width: max-content;
+    color: #757575;
+    font-size: 13px;
+    font-family: 'Courier New', Courier, monospace;
+    border: 1px solid #bbbbbb;
+    border-radius: 3px;
+    background-color: whitesmoke;
+    padding: 3px;
+}
