--- a/src/components/pages/Admin/DetailedCompotents/ChangePsw.module.css
+++ b/src/components/pages/Admin/DetailedCompotents/ChangePsw.module.css
@@ -80,3 +80,14 @@ h1 {
 .changePassWrapper hr {
   margin-top: 30px;
 }
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+  border-top: 1.5px solid #7e57c22e;
+  border-bottom: 1.5px solid #7e57c22e
+}
+
+.formContainer {
+  text-align: right;
+}
