--- a/src/components/pages/Admin/Question/Questions.module.css
+++ b/src/components/pages/Admin/Question/Questions.module.css
@@ -165,7 +165,11 @@ select .selected {
   color: #555555;
   font-weight: bold;
   cursor: pointer;
+  padding-right:15px;
+  word-break: break-word;
 }
+
+
 
 .questionItem-exit-active {
     animation: questionItem 800ms;
