hint addition,  back-buttons animation adding (reset & after reset), change psw form css

--- a/src/components/pages/Admin/DetailedCompotents/ChangePsw.module.css
+++ b/src/components/pages/Admin/DetailedCompotents/ChangePsw.module.css
@@ -19,7 +19,8 @@ h1 {
   margin: 50px 0 0 0;
 }
 
-.inputWrapper, .submitWrapper {
+.inputWrapper,
+.submitWrapper {
   display: flex;
   align-items: center;
   margin-bottom: 40px;
@@ -29,13 +30,14 @@ h1 {
   width: 30%;
   color: #919191;
   font-size: 19px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
   letter-spacing: 1px;
   margin-right: 30px;
 }
 
-.inputWrapper input[type="password"], .changePswSubmit {
+.inputWrapper input[type="password"],
+.changePswSubmit {
   height: 40px;
   width: 70%;
   border: 1.5px solid #bbbbbb;
@@ -64,7 +66,7 @@ h1 {
   border: 1.5px solid white;
   color: white;
   font-size: 19px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-weight: bold;
   letter-spacing: normal;
 }
@@ -79,4 +81,15 @@ h1 {
 
 .changePassWrapper hr {
   margin-top: 30px;
+}
+
+.formContainer {
+  display: flex;
+  justify-content: center;
+  border-top: 1.5px solid #7e57c22e;
+  border-bottom: 1.5px solid #7e57c22e;
+}
+
+.formContainer {
+  text-align: right;
 }
