--- a/src/components/pages/Admin/Admin.css
+++ b/src/components/pages/Admin/Admin.css
@@ -16,7 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 19px;
   color: white;
   animation: 800ms ease-out 0s 1 slideInFromAboveAdm;
@@ -50,50 +50,50 @@
     grid-template-rows:
       auto /* Header */
       minmax(75px, auto) /* Nav */
-      1fr /* Content */
+      1fr; /* Content */
   }
 
-.sidebar-left {
+  .sidebar-left {
     margin: 0;
   }
 }
 
 .quizesWrapper {
-    width: 100%;
-    border-radius: 15px;
-    padding: 15px;
-    box-shadow: 5px 5px 25px rgba(0,0,0,.5);
-    color: #555555;
+  width: 100%;
+  border-radius: 15px;
+  padding: 15px;
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.5);
+  color: #555555;
 }
 
 .logoAdmin {
-    color: #fff;
-    font-size: 50px;
-    font-weight: bolder;
-    text-shadow: 2px 2px 6px #F5F5F5;
-    margin-left: 14px;
-    text-decoration: none;
-  }
+  color: #fff;
+  font-size: 50px;
+  font-weight: bolder;
+  text-shadow: 2px 2px 6px #f5f5f5;
+  margin-left: 14px;
+  text-decoration: none;
+}
 
 .logout {
-    background-color: white;
-    border: 1px solid #fff;
-    border-radius: 5px;
-    padding: 7px 5px;
-    height: 40px;
-    width: 150px;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 19px;
-    color: #555555;
-    box-shadow: 2px 2px 2px #d1d1d1;
-    outline: none;
-    margin-right: 25px;
-    cursor: pointer;
+  background-color: white;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  padding: 7px 5px;
+  height: 40px;
+  width: 150px;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 19px;
+  color: #555555;
+  box-shadow: 2px 2px 2px #d1d1d1;
+  outline: none;
+  margin-right: 25px;
+  cursor: pointer;
 }
 
 .navAdmin {
   overflow-x: hidden;
-  box-shadow: 10px 0px 25px rgba(0,0,0,.5);
+  box-shadow: 10px 0px 25px rgba(0, 0, 0, 0.5);
   animation: 800ms ease-out 0s 1 slideInFromLeftAdm;
 }
 
@@ -109,25 +109,27 @@
   color: #fff;
 }
 
-.addForm{
-  width:65%; 
+.addForm {
+  width: 65%;
   min-width: 350px;
   font-size: 18px;
   border-radius: 15px;
   padding: 15px;
-  box-shadow: 5px 5px 25px rgba(0,0,0,.5);
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.5);
   color: #555555;
   margin: 0 auto;
 }
 
-.addForm input, select, textarea{
-    outline: none;
-    padding: 7px;
-    font-family: 'Courier New', Courier, monospace;
-    color: #757575;
-    font-size: 17px;
-    border: 1.5px solid #bbbbbb;
-    border-radius: 5px;
+.addForm input,
+select,
+textarea {
+  outline: none;
+  padding: 7px;
+  font-family: "Courier New", Courier, monospace;
+  color: #757575;
+  font-size: 17px;
+  border: 1.5px solid #bbbbbb;
+  border-radius: 5px;
 }
 
 input::placeholder {
@@ -135,86 +137,87 @@ input::placeholder {
   cursor: pointer;
 }
 
-.addForm span{
-     padding-left: 10px;
-     font-weight: bold;
+.addForm span {
+  padding-left: 10px;
+  font-weight: bold;
 }
 
-.addForm form{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
+.addForm form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .addForm input[type="number"] {
-    width: 70px;
+  width: 70px;
 }
 
 .addForm input[type="submit"] {
-    border: 2px solid #bbbbbb;
-    font-weight: bold;
-    margin: 5px auto;
-    padding: 10px;
-    color: #555555;
+  border: 2px solid #bbbbbb;
+  font-weight: bold;
+  margin: 5px auto;
+  padding: 10px;
+  color: #555555;
 }
 
-.wideRow, .addForm textarea {
-    width: 100%;
+.wideRow,
+.addForm textarea {
+  width: 100%;
 }
 
 .addFormTxtarea {
   max-width: 100%;
   margin: 0;
 }
-.modalInptName{
+.modalInptName {
   text-align: center;
 }
 
 .row {
-    display:flex;
-    width:99%;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 5px;
+  display: flex;
+  width: 99%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5px;
 }
 
-.centerAdm { 
-    text-align: center; 
-    width:100%;
+.centerAdm {
+  text-align: center;
+  width: 100%;
 }
 
-.questions{
-    width: 70%;
-    font-size: 20px;
+.questions {
+  width: 70%;
+  font-size: 20px;
 }
 
 .questionItem {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 3px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 3px;
 }
 
 .quizLi {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: 7px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 7px;
 }
 
 .getLinkBtn {
   width: 130px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   font-size: 17px;
   color: #555555;
   outline: none;
   border: none;
   padding: 11px;
   border-radius: 5px;
-  box-shadow: 2px 2px 2px rgba(0,0,0,.5);
-  background-color: rgba(255,255,255,0.95);
-  padding: 9px!important;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.95);
+  padding: 9px !important;
   /*  outline: none;
     padding: 10px;
     border: none;
@@ -232,133 +235,131 @@ input::placeholder {
 }
 
 .pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.red{
-    color: red;
+.red {
+  color: red;
 }
 
 .adminModalForm {
-    display: flex;
-    flex-direction:column;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 25px;
 }
 
-.adminModalForm input[type='text'] {
-    outline: none;
-    padding: 10px;
-    border-radius: 7px;
-    font-family: 'Courier New', Courier, monospace;
-    font-style: italic;
-    font-size: 17px;
-    box-shadow: 2px 2px 2px rgba(0,0,0,.5);
-    background-color: rgba(0,0,0,.02);
-    border: none;
-    width: 100%;
+.adminModalForm input[type="text"] {
+  outline: none;
+  padding: 10px;
+  border-radius: 7px;
+  font-family: "Courier New", Courier, monospace;
+  font-style: italic;
+  font-size: 17px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.02);
+  border: none;
+  width: 100%;
 }
 
-.adminModalForm input[type='submit'] {
-    outline: none;
-    background: none;
-    border: none;
-    padding: 7px 20px;
-    color: green;
-    font-size: 15pt;
-    border-radius: 7px;
-    box-shadow: 2px 2px 2px rgba(0,0,0,.5);
-    background-color: rgba(0,0,0,.02);
-  }
+.adminModalForm input[type="submit"] {
+  outline: none;
+  background: none;
+  border: none;
+  padding: 7px 20px;
+  color: green;
+  font-size: 15pt;
+  border-radius: 7px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.02);
+}
 
-  .createQuiz {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 15pt;
-    font-weight: bold;
-    outline: none;
-    border: none;
-    padding: 7px 20px;
-    border-radius: 7px;
-    box-shadow: 2px 2px 5px rgba(0,0,0,.5);
-    background-color:rgba(255,255,255,0.95);;
-  }
+.createQuiz {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 15pt;
+  font-weight: bold;
+  outline: none;
+  border: none;
+  padding: 7px 20px;
+  border-radius: 7px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.95);
+}
 
 .adminModalForm select {
-    outline: none;
-    background: none;
-    border: none;
-    width: 100%;
-    box-shadow: 2px 2px 2px rgba(0,0,0,.5);
-    padding: 10px;
-    text-align-last: center;
-    background-color: rgba(0,0,0,.02);
+  outline: none;
+  background: none;
+  border: none;
+  width: 100%;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  padding: 10px;
+  text-align-last: center;
+  background-color: rgba(0, 0, 0, 0.02);
 }
 
 .adminModalForm input[type="number"] {
-    outline: none;
-    margin: 10px;
-    padding: 10px;
-    font-family: 'Courier New', Courier, monospace;
-    font-style: italic;
-    font-size: 17px;
-    border: none;
-    border-radius: 7px;
-    text-align: center;
-    box-shadow: 2px 2px 2px rgba(0,0,0,.5);
-    width: 100%;
-    background-color: rgba(0,0,0,.02);
+  outline: none;
+  margin: 10px;
+  padding: 10px;
+  font-family: "Courier New", Courier, monospace;
+  font-style: italic;
+  font-size: 17px;
+  border: none;
+  border-radius: 7px;
+  text-align: center;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.02);
 }
 
 .createCancelDiv {
-    display: flex;
-    margin-top: 25px;
-    align-items: center;
+  display: flex;
+  margin-top: 25px;
+  align-items: center;
 }
 
 @keyframes slideInFromLeftAdm {
-    0% {
-      transform: translateX(-100%);
-    }
-    100% {
-      transform: translateX(0);
-    }
+  0% {
+    transform: translateX(-100%);
   }
-  @keyframes slideInFromRightAdm {
-    0% {
-      transform: scale(0);
-    }
-    100% {
-      transform: scale(1);
-    }
+  100% {
+    transform: translateX(0);
+  }
 }
-  
+@keyframes slideInFromRightAdm {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 @keyframes slideInFromAboveAdm {
-    0% {
-      opacity: 0;
-      transform: translateY(-100%);
-    }
-    35% {
-      opacity: 0.5;
-      transform: translateY(-50%);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  35% {
+    opacity: 0.5;
+    transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
-
-
 
 .successAnim {
-    animation: successAnim 800ms forwards;
+  animation: successAnim 800ms forwards;
 }
 .rotate-active {
   animation: spin 1s linear infinite;
 }
 
-.rotate-exit.rotate-exit-active{
-  opacity:1;
+.rotate-exit.rotate-exit-active {
+  opacity: 1;
 }
 .rotate-active {
   animation: spin 1s linear infinite;
@@ -370,75 +371,75 @@ input::placeholder {
 }
 
 .settingsWrapper {
-    margin-top: 3px;
-    border: 1.5px solid white;
-    border-radius: 5px;
+  margin-top: 3px;
+  border: 1.5px solid white;
+  border-radius: 5px;
 }
 
 .settingsButton {
-    height: 48px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border: 1.5px solid #fff;
-    border-radius: 5px;
-    outline: none;
-    font-size: 19px;
-    font-family: 'Courier New', Courier, monospace;
-    color: #fff;
-    font-weight: bold;
-    text-shadow: none;
-    margin-top: 50px;
+  height: 48px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: 1.5px solid #fff;
+  border-radius: 5px;
+  outline: none;
+  font-size: 19px;
+  font-family: "Courier New", Courier, monospace;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: none;
+  margin-top: 50px;
 }
 
 .settingsButton:hover {
-    cursor: pointer;
-    box-shadow: 0 0 5px #fff;
+  cursor: pointer;
+  box-shadow: 0 0 5px #fff;
 }
 
 .settingsContent {
-    display: flex;
-    flex-direction: column;
-    height: min-content;
-    padding: 2px;
+  display: flex;
+  flex-direction: column;
+  height: min-content;
+  padding: 2px;
 }
 
 .themeSelect {
-    background-color: transparent;
-    width:100%;
-    padding: 10px;
-    font-size: 19px;
-    font-family: 'Courier New', Courier, monospace;
-    color: #fff;
-    text-align: center;
-    text-align-last: center;
-    font-style: normal !important;
-    border: 1px solid white;
-    border-radius: 3px;
-    outline: none;
+  background-color: transparent;
+  width: 100%;
+  padding: 10px;
+  font-size: 19px;
+  font-family: "Courier New", Courier, monospace;
+  color: #fff;
+  text-align: center;
+  text-align-last: center;
+  font-style: normal !important;
+  border: 1px solid white;
+  border-radius: 3px;
+  outline: none;
 }
 
 .themeSelect:hover {
-    background-color: transparent;
-    border: 1px solid #fff;
-    cursor: pointer;
+  background-color: transparent;
+  border: 1px solid #fff;
+  cursor: pointer;
 }
 
 .settingsContent button {
-    width: 100%;
-    height: 48px;
-    background-color: transparent;
-    border: 1px solid white;
-    text-shadow: none;
-    border-radius: 3px;
-    outline: none;
-    color: #fff;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 19px;
-    font-weight: normal;
-    margin-top: 2px;
+  width: 100%;
+  height: 48px;
+  background-color: transparent;
+  border: 1px solid white;
+  text-shadow: none;
+  border-radius: 3px;
+  outline: none;
+  color: #fff;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 19px;
+  font-weight: normal;
+  margin-top: 2px;
 }
 
 .filterDiv {
@@ -453,167 +454,170 @@ input::placeholder {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
- /* border: 1px solid red;
+  /* border: 1px solid red;
 */
 }
 
-.filterForm input[type='text'], .searchField {
-  
-    width: 50%;
-    padding: 9px;
-    border: 1.5px solid #bbbbbb;
-    border-radius: 5px;
-    color: #757575;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 17px;
-    letter-spacing: 0.02857em;
-    outline: none;
+.filterForm input[type="text"],
+.searchField {
+  width: 50%;
+  padding: 9px;
+  border: 1.5px solid #bbbbbb;
+  border-radius: 5px;
+  color: #757575;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 17px;
+  letter-spacing: 0.02857em;
+  outline: none;
 }
 
 .filterForm select {
-  box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-.filterBy{
+.filterBy {
   margin-bottom: 15px;
   font-size: 19px;
   font-weight: bold;
-
+  color: #555555;
 }
 
 .settingsContent button:hover {
-    font-weight: bold;
-    color: #555555;
-    cursor: pointer;
+  font-weight: bold;
+  color: #555555;
+  cursor: pointer;
 }
 
-  .questionItemAnim-exit-active {
-      animation: questionItem 800ms ease-in;
-  }
-  
-  .questionItemAnim-enter-active {
-      animation: questionItem 800ms ease-in alternate-reverse;
-  }
-  
-  @keyframes questionItem {
-    0% {
-      opacity: 1;
-      transform: translateX(0);
-    }
-  
-    30% {
-      opacity: .7;
-      transform: translateX(30px);
-    }
-  
-    100% {
-      opacity: 0;
-      transform: translateX(-200px);
-    }
+.questionItemAnim-exit-active {
+  animation: questionItem 800ms ease-in;
+}
+
+.questionItemAnim-enter-active {
+  animation: questionItem 800ms ease-in alternate-reverse;
+}
+
+@keyframes questionItem {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
   }
 
-.resetBtn:hover{
-    cursor: pointer;
+  30% {
+    opacity: 0.7;
+    transform: translateX(30px);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateX(-200px);
+  }
+}
+
+.resetBtn:hover {
+  cursor: pointer;
 }
 
 .resetBtn {
-    font-style: normal!important;
-    font-weight: bold;
-    font-size: 20pt!important;
-    background: none;
-    margin-top: 3px;
-    color: black;
-    border: none!important
+  font-style: normal !important;
+  font-weight: bold;
+  font-size: 20pt !important;
+  background: none;
+  margin-top: 3px;
+  color: black;
+  border: none !important;
 }
 
 .addFormHeader {
-    padding: 5px;
-    text-align: center;
-    font-size: 23pt;
-    font-weight: bold;
+  padding: 5px;
+  text-align: center;
+  font-size: 23pt;
+  font-weight: bold;
 }
 
 @keyframes successAnim {
- 
-    0% {
-      opacity: .7;
-      transform: scale(.5);
-    }
-  
-    100% {
-      opacity: 1;
-      transform: scale(1);
-    }
+  0% {
+    opacity: 0.7;
+    transform: scale(0.5);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 .quizesTableDiv {
-    display: grid;
-  }
+  display: grid;
+}
 
 .copyLink {
-    display: flex;
-    flex-direction:row;
-    justify-content: space-evenly;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
-  
+
 .linkToCopyInpt {
-    border: none;
-    color: transparent;
-    /* z-index: 0; */
+  border: none;
+  color: transparent;
+  /* z-index: 0; */
 }
 
-.quizTable, .linkToCopyInpt {
-    grid-column: 1;
-    grid-row: 1;
+.quizTable,
+.linkToCopyInpt {
+  grid-column: 1;
+  grid-row: 1;
 }
 
-.quizTable { 
-    width: 100%;
-    border-collapse: collapse;
-    padding: 10px; 
-    text-align:center; 
-    background-color: white;
-    /* z-index: 1; */
-    font-size: 15pt;
+.quizTable {
+  width: 100%;
+  border-collapse: collapse;
+  padding: 10px;
+  text-align: center;
+  background-color: white;
+  /* z-index: 1; */
+  font-size: 15pt;
 }
 
-.quizTable td, th { 
-    border:none;
-    border-bottom: 1px solid #ccc; 
-    vertical-align: 0rem;
-    text-align:center; 
+.quizTable td,
+th {
+  border: none;
+  border-bottom: 1px solid #ccc;
+  vertical-align: 0rem;
+  text-align: center;
 }
 
-.quizTable  th { 
-    padding: 15px;
+.quizTable th {
+  padding: 15px;
 }
 
 .quizTable tr:first-child {
-    /*background: #ccc;*/
-    font-size: 19px; 
+  /*background: #ccc;*/
+  font-size: 19px;
 }
 
-.quizTable tr:last-child td{
-    vertical-align: bottom!important;
-    /*background: #ccc;*/
-    height: 50px;
-    font-size: 17px; 
-    font-weight: bold;
+.quizTable tr:last-child td {
+  vertical-align: bottom !important;
+  /*background: #ccc;*/
+  height: 50px;
+  font-size: 17px;
+  font-weight: bold;
 }
 
-.tablePaging{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding: 5px;
+.tablePaging {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 5px;
 }
 
 hr {
   margin: 0 0 25px 0;
-  border: 0.1px solid #FFF;
+  border: 0.1px solid #fff;
 }
 
-button, input[type='submit'], input[type='button'] {
+button,
+input[type="submit"],
+input[type="button"] {
   cursor: pointer;
 }
