--- a/src/components/pages/Feedback/Feedback.module.css
+++ b/src/components/pages/Feedback/Feedback.module.css
@@ -1,59 +1,60 @@
 .feedbackInformativeDivision {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: 95%;
-    height: 55%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 95%;
+  height: 55%;
+  margin-bottom: 19px;
 }
 
 .nameAndEmailField {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nameAndEmailField input {
-    height: 45px !important;
-    width: 45%;
-    color: #555555 !important;
-    font-size: 19px !important;
-    letter-spacing: 0.02857em !important;
-    font-family: 'Courier New', Courier, monospace !important;
-    border: 1.5px solid  #bbbbbb !important;
-    border-radius: 5px !important;
-    background-color: white !important;
-    text-align: center !important;
-    outline: none !important;
+  height: 45px !important;
+  width: 45%;
+  color: #555555 !important;
+  font-size: 19px !important;
+  letter-spacing: 0.02857em !important;
+  font-family: "Courier New", Courier, monospace !important;
+  border: 1.5px solid #bbbbbb !important;
+  border-radius: 5px !important;
+  background-color: white !important;
+  text-align: center !important;
+  outline: none !important;
 }
 
-.nameAndEmailField input:hover, 
+.nameAndEmailField input:hover,
 .feedbackInformativeDivision textarea:hover {
-    border-color: #7e57c2 !important;
-    color: #7e57c2 !important;
-    cursor: pointer !important;
+  border-color: #7e57c2 !important;
+  color: #7e57c2 !important;
+  cursor: pointer !important;
 }
 
 .nameAndEmailField input:hover::placeholder,
 .feedbackInformativeDivision textarea:hover::placeholder {
-    color: #7e57c2 !important;
+  color: #7e57c2 !important;
 }
 
 .feedbackInformativeDivision textarea {
-    color: #555555 !important;
-    font-size: 19px !important;
-    letter-spacing: 0.02857em !important;
-    font-family: 'Courier New', Courier, monospace !important;
-    border: 1.5px solid  #bbbbbb !important;
-    border-radius: 5px !important;
-    background-color: white !important;
-    text-align: center !important;
-    outline: none !important;
-    max-width : 99%;
-    max-height : 50%;
-    min-width: 99%;
-    min-height: 50%;
-    margin-bottom: -45px;
-} 
+  color: #555555 !important;
+  font-size: 19px !important;
+  letter-spacing: 0.02857em !important;
+  font-family: "Courier New", Courier, monospace !important;
+  border: 1.5px solid #bbbbbb !important;
+  border-radius: 5px !important;
+  background-color: white !important;
+  text-align: center !important;
+  outline: none !important;
+  max-width: 99%;
+  max-height: 50%;
+  min-width: 99%;
+  min-height: 50%;
+  margin-bottom: -45px;
+}
 
 .feedbackCustomButton button {
-    width: 45% !important;
+  width: 45% !important;
 }
